--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "helmet": "^7.2.0",
     "lucide-react": "^0.344.0",
+    "motion": "^12.18.1",
     "next": "14.1.0",
     "next-themes": "^0.4.6",
     "react": "^18",
